--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+node_modules/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+
+# IDEs and editors
+.vscode/
+.idea/
+
+# system
+Thumbs.db
+desktop.ini
